--- a/hamburguer.css
+++ b/hamburguer.css
@@ -13,18 +13,22 @@ body {
 	background-color: whitesmoke;
 }
 h1{
-    margin-left: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 h2{
-    margin-left: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-left: 10%;
 }
-
 p {
 	margin: 0;
 	line-height: 1.6;
 }
 
-ol {
+ul {
 	list-style: none;
 	counter-reset: list;
 	padding: 0 1rem;
