--- a/hotdog.css
+++ b/hotdog.css
@@ -13,10 +13,15 @@ body {
 	background-color: whitesmoke;
 }
 h1{
-    margin-left: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 h2{
-    margin-left: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-left: 10%;
 }
 
 p {
@@ -24,7 +29,7 @@ p {
 	line-height: 1.6;
 }
 
-ol {
+ul {
 	list-style: none;
 	counter-reset: list;
 	padding: 0 1rem;
